# DgRender3D

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.cpp
demo/sample_scene/: sample_scene.blend  sample_scene.blend1  sample_scene.glb
doc/: CMakeLists.txt  Doxyfile
lib/: CMakeLists.txt  dgrender3d.h  freecamera.cpp  freecamera.h  mesh.cpp  mesh.h  meshnode.cpp  meshnode.h  model.cpp  model.h  shader.cpp  shader.h  stb_image.h  test.cpp  testclass.h  texture.cpp  texture.h
lib/shaders/: fragment_shader.glslf  vertex_shader.glslv
